增加授权接口
