# demo/swagger/swagger.json
@@ -16,6 +16,26 @@
     },
     "basePath": "/api",
     "paths": {
+        "/auth": {
+            "get": {
+                "description": "授权接口",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Authorize",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/helper.Success"
+                        }
+                    }
+                }
+            }
+        },
         "/demo/get": {
             "get": {
                 "description": "Get",
@@ -83,6 +103,9 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "demo"
+                ],
                 "summary": "Hello",
                 "responses": {
                     "200": {
@@ -103,6 +126,9 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "demo"
+                ],
                 "summary": "Set",
                 "parameters": [
                     {
@@ -119,6 +145,66 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/helper.ErrorInfo"
+                        }
+                    }
+                }
+            }
+        },
+        "/signin": {
+            "post": {
+                "description": "登陆",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Signin",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/helper.Success"
+                        }
+                    }
+                }
+            }
+        },
+        "/signout": {
+            "get": {
+                "description": "登出",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Signin",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/helper.Success"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/hello": {
+            "get": {
+                "description": "用户接口测试",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "hello",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/helper.Success"
                         }
                     }
                 }
@@ -144,6 +230,23 @@
                 "showType": {
                     "description": "错误显示类型：0静音； 1条消息警告； 2消息错误； 4通知； 9页",
                     "type": "integer"
+                },
+                "success": {
+                    "description": "请求成功, false",
+                    "type": "boolean"
+                },
+                "traceId": {
+                    "description": "方便进行后端故障排除：唯一的请求ID",
+                    "type": "string"
+                }
+            }
+        },
+        "helper.Success": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "description": "响应数据",
+                    "type": "object"
                 },
                 "success": {
                     "description": "请求成功, false",
